--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,8 +4,10 @@ output:
   html_document:
     keep_md: true
 ---
-```{r , echo = FALSE , eval= FALSE }
+```{r , echo = FALSE , eval= FALSE , warning= FALSE}
 library(dplyr)  
+library(magrittr)
+library(stringr)
 ```
 
 
@@ -33,25 +35,67 @@ For this part of the assignment, you can ignore the missing values in the datase
 ```{r , echo = TRUE}
 totalStepsDay <- tapply(data$steps, data$date, sum)  
 hist(totalStepsDay,
-      breaks = length(totalStepsDay),
-      axes = FALSE,
-      xlab = "Day",
-      ylab = "Total Steps", 
+      #breaks = length(totalStepsDay),
+      #xaxt = "n",
+      #xlab = "Day",
+      xlab = "Total Steps", 
       main = "Histogram of the total number of steps")
+
+```  
+
+2. Calculate and report the **mean** and **median** total number of steps taken per day
+
+```{r , echo = TRUE}
+print(paste("The median is ",median(totalStepsDay, na.rm = TRUE)))
+print(paste("The mean is ",mean(totalStepsDay, na.rm = TRUE)))
+```  
+
+## What is the average daily activity pattern?  
+1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)  
+```{r , echo = TRUE}
+intervalSteps <- tapply(data$steps, data$interval, mean , na.rm=TRUE)  
+intervalSteps <- data.frame(interval= row.names(intervalSteps) , mean.steps=intervalSteps )  
+intervalSteps$hhdd <- stringr::str_pad(intervalSteps$interval,4,pad="0")  
+intervalSteps$HM <- strptime(intervalSteps$hhdd,"%H%M")  
+plot(intervalSteps$HM,intervalSteps$mean.steps, type="l",
+      xlab = "5-minute interval",
+      ylab = "Average number of steps taken", 
+      main = "Average daily activity pattern")   
+
+```  
+
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?  
+```{r , echo = TRUE}
+print(paste("The 5-minute interval, on average across all the days in the dataset that contains the maximum number of steps is ",intervalSteps[which.max(intervalSteps$mean.steps),1]))  
 
 ```
 
 
+## Imputing missing values  
+Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.  
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs) 
+```{r}
+
+```
+
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.  
+```{r}
+
+```
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.  
+```{r}
+
+```
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?  
+```{r}
+
+```
 
 
+## Are there differences in activity patterns between weekdays and weekends?  
+For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.  
+1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.  
+2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).  
 
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
