--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,9 +4,10 @@ output:
   html_document:
     keep_md: true
 ---
-```{r , echo = FALSE , eval= FALSE , warning= FALSE}
-library(dplyr)  
+```{r setup, warning= FALSE , include= FALSE}
+library(tidyverse)
 library(magrittr)
+library(dplyr) 
 library(stringr)
 ```
 
@@ -25,7 +26,7 @@ data <- read.csv("activity.csv")
 2.  Process/transform the data (if necessary) into a format suitable for your analysis
 ```{r , echo =TRUE}
 data$date <- as.Date(data$date)
-#Sys.setlocale("LC_TIME","English") If necessary
+Sys.setlocale("LC_TIME","English") #If necessary
 ```
 
 
@@ -35,9 +36,6 @@ For this part of the assignment, you can ignore the missing values in the datase
 ```{r , echo = TRUE}
 totalStepsDay <- tapply(data$steps, data$date, sum)  
 hist(totalStepsDay,
-      #breaks = length(totalStepsDay),
-      #xaxt = "n",
-      #xlab = "Day",
       xlab = "Total Steps", 
       main = "Histogram of the total number of steps")
 
@@ -74,28 +72,83 @@ print(paste("The 5-minute interval, on average across all the days in the datase
 ## Imputing missing values  
 Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.  
 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs) 
-```{r}
+```{r , echo = TRUE}
+print(paste("The total number of missing values in the dataset is ",sum(is.na(data))))
 
 ```
 
 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.  
-```{r}
-
+```{r , echo = TRUE }
+indexes <- intervalSteps[,1:2]
+myfunction <- function(data , index){
+  newData <- data
+  for(i in 1:length(data[,1])){
+    if(is.na(data[i,1])){
+      int <- data[i,3]
+      value <- dplyr::filter(indexes,interval==int)[2]
+      newData[i,1] <- value
+    }
+  }
+return(newData)
+}
 ```
 
 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.  
-```{r}
+```{r , echo = TRUE}
+newData <- myfunction(data,indexes)
+head(newData)
 
 ```
 
 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?  
-```{r}
+```{r , echo = TRUE}
+totalStepsDayNONA <- tapply(newData$steps, newData$date, sum)  
+hist(totalStepsDayNONA,
+      xlab = "Total Steps", 
+      main = "Histogram of the total number of steps")  
+
+print(paste("The median is ",median(totalStepsDayNONA)))
+print(paste("The mean is ",mean(totalStepsDayNONA)))
 
 ```
-
+Summary of the data with NA  
+```{r , echo = TRUE}
+summary(totalStepsDay)
+```  
+Summary of the data with imputting missing data  
+```{r , echo = TRUE}
+summary(totalStepsDayNONA)
+```
 
 ## Are there differences in activity patterns between weekdays and weekends?  
 For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.  
-1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.  
-2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).  
+
+1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day. 
+```{r , echo = TRUE }
+newData$interval <- stringr::str_pad(newData$interval,4,pad="0")  
+newData$HM <- strptime(paste(newData$date,newData$interval),"%Y-%m-%d%H%M") 
+newData$day <- as.factor(weekdays(newData$date))
+newData %<>% mutate(wday= as.factor(
+                                if_else(newData$day %in% c("Saturday","Sunday"),
+                                              true = "weekend",
+                                              false = "weekday")))
+```
+
+
+2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
+```{r , echo = TRUE ,warning=FALSE,message=FALSE}
+newData %<>% group_by(interval,wday) %>% summarise(mean=mean(steps))
+theme_set(
+  theme_light() + theme(legend.position = "top")
+  )
+a <-  ggplot(newData,aes(interval,mean , group = 1))
+a   + facet_wrap( vars(wday),nrow = 2  ) +
+      geom_line(colour = "blue") + 
+      theme(strip.text.x = element_text(color= "#FFDA1A", face = "bold"),
+            strip.background.x = element_rect(fill = "#0051BA"), 
+            plot.title = element_text(size=18, color = "#0051BA" , face = "bold" ),
+            axis.text.x.bottom = element_blank()) +
+      labs(x ="5-minute interval" , y ="mean of steps", title = "Activity patterns between weekdays and weekends")
+```
+
 
